Move play button up to prevent ripple overlap with text

--- a/style.css
+++ b/style.css
@@ -342,6 +342,7 @@ main {
     .visualizer-container {
         width: 120px;
         height: 120px;
+        margin-top: -3rem;
     }
 
     .play-btn {
